# Dubizzle-AI-Car-Assistant-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  agent.py  config.py  db.py  main.py  media.py  memory.py  retrieval.py  tools.py
client/: app.py
data/: app.db-shm  app.db-wal  embeddings.npy  inventory.json
demo/: two_session_demo.py
scripts/: enrich.py
tests/: conftest.py  test_booking.py  test_grounding.py  test_guardrails.py  test_media.py  test_memory.py  test_retrieval.py  test_search.py
