[project]
name = "dubizzle-car-agent"
version = "0.1.0"
description = "Conversational AI assistant for the dubizzle used-cars marketplace (prototype)."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "litellm>=1.55",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "numpy>=1.26",
  "python-dotenv>=1.0",
  "streamlit>=1.40",
  "httpx>=0.27",
  "pydantic>=2.9",
  "sqlalchemy>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.uv]
package = false
